--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width" />
-        <title>ABC Company</title>
-        <link href="style.css" rel="stylesheet" type="text/css" />
-    </head>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>The Movie Corner</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&family=PT+Serif+Caption&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Irish+Grover&family=PT+Serif+Caption&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <h1>The Movie Corner</h1>
+        <img src="HP photo.webp" alt="Harry Potter and the Half-Blood Prince">
+    </header>
 
-    <body>
-        <h1>ABC Company</h1>
-        <h2>History of the company</h2>
-        <p>
-            ABC Company is founded by Tan Ah Kow in year 2024.
-        </p>
-    </body>
+    <h2>Harry Potter and the Half-Blood Prince (2009)</h2>
+    <p>Air Date: 07/15/2009</p>
+    <p>Duration: 2h 33m</p>
+    <p>Genre(s): Adventure, Fantasy</p>
+</body>
 </html>
