added nav bar and overview section

--- a/index.html
+++ b/index.html
@@ -11,12 +11,33 @@
 <body>
     <header>
         <h1>The Movie Corner</h1>
+        <nav>
+            <a href="#home">HOME</a>
+            <a href="#cast">CAST</a>
+            <a href="#more">MORE</a>
+        </nav>
         <img src="HP photo.webp" alt="Harry Potter and the Half-Blood Prince">
     </header>
 
-    <h2>Harry Potter and the Half-Blood Prince (2009)</h2>
-    <p>Air Date: 07/15/2009</p>
-    <p>Duration: 2h 33m</p>
-    <p>Genre(s): Adventure, Fantasy</p>
+    <section>
+        <h2>Harry Potter and the Half-Blood Prince (2009)</h2>
+        <p>
+            Air Date: 07/15/2009<br>
+            Duration: 2h 33m<br>
+            Genre(s): Adventure, Fantasy
+        </p>
+        <p class="p1">Dark Secrets Revealed</p1>
+        <h3>Overview</h3>
+        <p class="p2">
+            As Lord Voldemort tightens his grip on both the Muggle and wizarding worlds, 
+            Hogwarts is no longer a safe haven. Harry suspects perils may even lie within the castle, 
+            but Dumbledore is more intent upon preparing him for the final battle fast approaching. 
+            Together they work to find the key to unlock Voldemorts defenses and colleague Horace Slughorn, 
+            whom he believes holds crucial information. Even as the decisive showdown looms, romance blossoms for 
+            Harry, Ron, Hermione and their classmates. Love is in the air, but danger lies ahead and Hogwarts may 
+            never be the same again.
+        </p>
+    </section>
+    
 </body>
 </html>
