finished up main page (index.html), added style formatting in style.css and worked on all cast page (allcast.html)

--- a/allcast.html
+++ b/allcast.html
@@ -16,29 +16,8 @@
             <a href="allcast.html">CAST</a>
             <a href="#more">MORE</a>
         </nav>
-        <img src="Images/HP photo.webp" alt="Harry Potter and the Half-Blood Prince">
     </header>
 
-    <h2>Harry Potter and the Half-Blood Prince (2009)</h2>
-    <section>
-        <p>
-            Air Date: 07/15/2009<br>
-            Duration: 2h 33m<br>
-            Genre(s): Adventure, Fantasy
-        </p>
-        <p class="p1">Dark Secrets Revealed</p1>
-        <h3>Overview</h3>
-        <p class="p2">
-            As Lord Voldemort tightens his grip on both the Muggle and wizarding worlds, 
-            Hogwarts is no longer a safe haven. Harry suspects perils may even lie within the castle, 
-            but Dumbledore is more intent upon preparing him for the final battle fast approaching. 
-            Together they work to find the key to unlock Voldemorts defenses and colleague Horace Slughorn, 
-            whom he believes holds crucial information. Even as the decisive showdown looms, romance blossoms for 
-            Harry, Ron, Hermione and their classmates. Love is in the air, but danger lies ahead and Hogwarts may 
-            never be the same again.
-        </p>
-    </section>
-    
     <h4>CAST</h4>
     <section>
         <h3>Main Cast</h3>
@@ -92,15 +71,58 @@
                     <p>Maggie Smith</p>
                     <p class="role">Minerva McGonagall</p>
                 </div>
-            </div>
-            <a href="allcast.html">
-                <div class="button-container">
-                <button class="button">Show More</button>
-            </a>
+                <div class="cast-names">
+                    <img src="Images/BW.jpg" alt="Bonnie Wright">
+                    <p>Bonnie Wright</p>
+                    <p class="role">Ginny Weasley</p>
+                </div>
+                <div class="cast-names">
+                    <img src="Images/OP.jpg" alt="Oliver Phelps">
+                    <p>Oliver Phelps</p>
+                    <p class="role">George Weasley</p>
+                </div>
+                <div class="cast-names">
+                    <img src="Images/JP.jpg" alt="James Phelps">
+                    <p>James Phelps</p>
+                    <p class="role">Fred Weasley</p>
+                </div>
+                <div class="cast-names">
+                    <img src="Images/JC.jpg" alt="Jessie Cave">
+                    <p>Jessie Cave</p>
+                    <p class="role">Lavender Brown</p>
+                </div>
+                <div class="cast-names">
+                    <img src="Images/EL.jpg" alt="Evanna Lynch">
+                    <p>Evanna Lynch</p>
+                    <p class="role">Luna Lovegood</p>
+                </div>
+                <div class="cast-names">
+                    <img src="Images/RC.webp" alt="Robbie Coltrane">
+                    <p>Robbie Coltrane</p>
+                    <p class="role">Rubeus Hagrid</p>
+                </div>
+                <div class="cast-names">
+                    <img src="Images/HBC.jpg" alt="Helena B. Carter">
+                    <p>Helena B. Carter</p>
+                    <p class="role">Bellatrix Lestrange</p>
+                </div>
+                <div class="cast-names">
+                    <img src="Images/DT.jpg" alt="David Thewlis">
+                    <p>David Thewlis</p>
+                    <p class="role">Remus Lupin</p>
+                </div>
+                <div class="cast-names">
+                    <img src="Images/HM.webp" alt="Helen McCrory">
+                    <p>Helen McCrory</p>
+                    <p class="role">Narcissa Malfoy</p>
+                </div>
+                <div class="cast-names">
+                    <img src="Images/ML.jpg" alt="Matthew Lewis">
+                    <p>Matthew Lewis</p>
+                    <p class="role">Neville Longbottom</p>
+                </div>
             </div>
         </div>
-    </section>
-
     <footer>THE MOVIE CORNER</footer>
 </body>
 </html>
