added more info page (more.html), linked each person's photo to an external link containing their information, and added effect for hovering over the image

--- a/allcast.html
+++ b/allcast.html
@@ -14,7 +14,7 @@
         <nav>
             <a href="index.html">HOME</a>
             <a href="allcast.html">CAST</a>
-            <a href="#more">MORE</a>
+            <a href="more.html">MORE</a>
         </nav>
     </header>
 
@@ -24,17 +24,23 @@
         <div class="cast-container">
             <div class="cast-images">
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0705356/?ref_=nv_sr_srsg_0_tt_5_nm_3_in_0_q_Daniel%2520Radcliffe" target="_blank">
                     <img src="Images/DR.webp" alt="Daniel Radcliffe">
+                    </a>
                     <p>Daniel Radcliffe</p>
                     <p class="role">Harry Potter</p>
                 </div>
-                <div class="cast-names">    
+                <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0342488/?ref_=nv_sr_srsg_0_tt_1_nm_7_in_0_q_Rupert%2520Grint" target="_blank">
                     <img src="Images/RG.jpg" alt="Rupert Grint">
+                    </a>
                     <p>Rupert Grint</p>
                     <p class="role">Ron Weasley</p>
                 </div>
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0914612/?ref_=nv_sr_srsg_0_tt_0_nm_8_in_0_q_Emma%2520Watson" target="_blank">
                     <img src="Images/EW.webp" alt="Emma Watson">
+                    </a>
                     <p>Emma Watson</p>
                     <p class="role">Hermione Granger</p>
                 </div>
@@ -47,82 +53,114 @@
         <div class="cast-container">
             <div class="cast-images">
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0271657/?ref_=nv_sr_srsg_0_tt_4_nm_4_in_0_q_Tom%2520Felton" target="_blank">
                     <img src="Images/TF.webp" alt="Tom Felton">
+                    </a>
                     <p>Tom Felton</p>
                     <p class="role">Draco Malfoy</p>
                 </div>
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0000614/?ref_=nv_sr_srsg_0_tt_3_nm_5_in_0_q_Alan%2520Rickm" target="_blank">
                     <img src="Images/AR.jpg" alt="Alan Rickman">
+                    </a>
                     <p>Alan Rickman</p>
                     <p class="role">Severus Snape</p>
                 </div>
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0002091/?ref_=nv_sr_srsg_0_tt_0_nm_8_in_0_q_Michael%2520Gambon" target="_blank">
                     <img src="Images/MG.jpg" alt="Michael Gambon">
+                    </a>
                     <p>Michael Gambon</p>
                     <p class="role">Albus Dumbledore</p>
                 </div>
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0000980/?ref_=nv_sr_srsg_0_tt_1_nm_7_in_0_q_Jim%2520Broadbent" target="_blank">
                     <img src="Images/JB.jpg" alt="Jim Broadbent">
+                    </a>
                     <p>Jim Broadbent</p>
                     <p class="role">Horace Slughorn</p>
                 </div>
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0001749/?ref_=nv_sr_srsg_0_tt_2_nm_6_in_0_q_Maggie%2520Smith" target="_blank">
                     <img src="Images/MS.webp" alt="Maggie Smith">
+                    </a>
                     <p>Maggie Smith</p>
                     <p class="role">Minerva McGonagall</p>
                 </div>
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0942247/?ref_=nv_sr_srsg_0_tt_0_nm_8_in_0_q_Bonnie%2520Wright" target="_blank">
                     <img src="Images/BW.jpg" alt="Bonnie Wright">
+                    </a>
                     <p>Bonnie Wright</p>
                     <p class="role">Ginny Weasley</p>
                 </div>
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0962360/?ref_=nv_sr_srsg_0_tt_1_nm_7_in_0_q_Oliver%2520Phelps" target="_blank">
                     <img src="Images/OP.jpg" alt="Oliver Phelps">
+                    </a>
                     <p>Oliver Phelps</p>
                     <p class="role">George Weasley</p>
                 </div>
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0962359/?ref_=nv_sr_srsg_0_tt_0_nm_8_in_0_q_James%2520Phelps" target="_blank">
                     <img src="Images/JP.jpg" alt="James Phelps">
+                    </a>
                     <p>James Phelps</p>
                     <p class="role">Fred Weasley</p>
                 </div>
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm2728165/?ref_=nv_sr_srsg_0_tt_1_nm_7_in_0_q_Jessie%2520Cave" target="_blank">
                     <img src="Images/JC.jpg" alt="Jessie Cave">
+                    </a>
                     <p>Jessie Cave</p>
                     <p class="role">Lavender Brown</p>
                 </div>
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm2121541/?ref_=nv_sr_srsg_0_tt_0_nm_8_in_0_q_Evanna%2520Lynch" target="_blank">
                     <img src="Images/EL.jpg" alt="Evanna Lynch">
+                    </a>
                     <p>Evanna Lynch</p>
                     <p class="role">Luna Lovegood</p>
                 </div>
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0001059/?ref_=nv_sr_srsg_0_tt_4_nm_3_in_0_q_Robbie%2520Coltrane" target="_blank">
                     <img src="Images/RC.webp" alt="Robbie Coltrane">
+                    </a>
                     <p>Robbie Coltrane</p>
                     <p class="role">Rubeus Hagrid</p>
                 </div>
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0000307/?ref_=nv_sr_srsg_0_tt_0_nm_2_in_0_q_Helena%2520Bonham%2520Carter" target="_blank">
                     <img src="Images/HBC.jpg" alt="Helena B. Carter">
+                    </a>
                     <p>Helena B. Carter</p>
                     <p class="role">Bellatrix Lestrange</p>
                 </div>
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0000667/?ref_=nv_sr_srsg_0_tt_1_nm_7_in_0_q_David%2520Thewlis" target="_blank">
                     <img src="Images/DT.jpg" alt="David Thewlis">
+                    </a>
                     <p>David Thewlis</p>
                     <p class="role">Remus Lupin</p>
                 </div>
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0567031/?ref_=nv_sr_srsg_0_tt_0_nm_8_in_0_q_Helen%2520Mc" target="_blank">
                     <img src="Images/HM.webp" alt="Helen McCrory">
+                    </a>
                     <p>Helen McCrory</p>
                     <p class="role">Narcissa Malfoy</p>
                 </div>
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0507535/?ref_=nv_sr_srsg_0_tt_0_nm_8_in_0_q_Matthew%2520Lewis" target="_blank">
                     <img src="Images/ML.jpg" alt="Matthew Lewis">
+                    </a>
                     <p>Matthew Lewis</p>
                     <p class="role">Neville Longbottom</p>
                 </div>
             </div>
         </div>
+    </section>
+
     <footer>THE MOVIE CORNER</footer>
 </body>
 </html>
