--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <a href="index.html">HOME</a>
             <a href="allcast.html">CAST</a>
-            <a href="#more">MORE</a>
+            <a href="more.html">MORE</a>
         </nav>
         <img src="Images/HP photo.webp" alt="Harry Potter and the Half-Blood Prince">
     </header>
