edited navigation bar to add hover effect, edited more.html and style.css

--- a/allcast.html
+++ b/allcast.html
@@ -13,7 +13,7 @@
         <h1>The Movie Corner</h1>
         <nav>
             <a href="index.html">HOME</a>
-            <a href="allcast.html">CAST</a>
+            <a href="allcast.html" class="active">CAST</a>
             <a href="more.html">MORE</a>
         </nav>
     </header>
@@ -159,6 +159,11 @@
                 </div>
             </div>
         </div>
+            <a href="index.html">
+                <div class="button-container">
+                    <button class="button">Back</button>
+                </div>
+            </a>
     </section>
 
     <footer>THE MOVIE CORNER</footer>
