--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1>The Movie Corner</h1>
         <nav>
-            <a href="index.html">HOME</a>
+            <a href="index.html" class="active">HOME</a>
             <a href="allcast.html">CAST</a>
             <a href="more.html">MORE</a>
         </nav>
@@ -45,17 +45,23 @@
         <div class="cast-container">
             <div class="cast-images">
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0705356/?ref_=nv_sr_srsg_0_tt_5_nm_3_in_0_q_Daniel%2520Radcliffe" target="_blank">
                     <img src="Images/DR.webp" alt="Daniel Radcliffe">
+                    </a>
                     <p>Daniel Radcliffe</p>
                     <p class="role">Harry Potter</p>
                 </div>
-                <div class="cast-names">    
+                <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0342488/?ref_=nv_sr_srsg_0_tt_1_nm_7_in_0_q_Rupert%2520Grint" target="_blank">
                     <img src="Images/RG.jpg" alt="Rupert Grint">
+                    </a>
                     <p>Rupert Grint</p>
                     <p class="role">Ron Weasley</p>
                 </div>
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0914612/?ref_=nv_sr_srsg_0_tt_0_nm_8_in_0_q_Emma%2520Watson" target="_blank">
                     <img src="Images/EW.webp" alt="Emma Watson">
+                    </a>
                     <p>Emma Watson</p>
                     <p class="role">Hermione Granger</p>
                 </div>
@@ -68,36 +74,47 @@
         <div class="cast-container">
             <div class="cast-images">
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0271657/?ref_=nv_sr_srsg_0_tt_4_nm_4_in_0_q_Tom%2520Felton" target="_blank">
                     <img src="Images/TF.webp" alt="Tom Felton">
+                    </a>
                     <p>Tom Felton</p>
                     <p class="role">Draco Malfoy</p>
                 </div>
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0000614/?ref_=nv_sr_srsg_0_tt_3_nm_5_in_0_q_Alan%2520Rickm" target="_blank">
                     <img src="Images/AR.jpg" alt="Alan Rickman">
+                    </a>
                     <p>Alan Rickman</p>
                     <p class="role">Severus Snape</p>
                 </div>
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0002091/?ref_=nv_sr_srsg_0_tt_0_nm_8_in_0_q_Michael%2520Gambon" target="_blank">
                     <img src="Images/MG.jpg" alt="Michael Gambon">
+                    </a>
                     <p>Michael Gambon</p>
                     <p class="role">Albus Dumbledore</p>
                 </div>
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0000980/?ref_=nv_sr_srsg_0_tt_1_nm_7_in_0_q_Jim%2520Broadbent" target="_blank">
                     <img src="Images/JB.jpg" alt="Jim Broadbent">
+                    </a>
                     <p>Jim Broadbent</p>
                     <p class="role">Horace Slughorn</p>
                 </div>
                 <div class="cast-names">
+                    <a href="https://www.imdb.com/name/nm0001749/?ref_=nv_sr_srsg_0_tt_2_nm_6_in_0_q_Maggie%2520Smith" target="_blank">
                     <img src="Images/MS.webp" alt="Maggie Smith">
+                    </a>
                     <p>Maggie Smith</p>
                     <p class="role">Minerva McGonagall</p>
                 </div>
             </div>
+        </div>        
             <a href="allcast.html">
                 <div class="button-container">
                 <button class="button">Show More</button>
+                </div>
             </a>
-            </div>
         </div>
     </section>
 
