--- a/more.html
+++ b/more.html
@@ -14,7 +14,7 @@
         <nav>
             <a href="index.html">HOME</a>
             <a href="allcast.html">CAST</a>
-            <a href="more.html">MORE</a>
+            <a href="more.html" class="active">MORE</a>
         </nav>
     </header>
 
@@ -36,17 +36,25 @@
             Though Harry (Daniel Radcliffe) suspects there are new dangers lurking within the castle walls, Dumbledore is more
             intent than ever on preparing the young wizard for the final battle with Voldemort. Meanwhile, teenage hormones run
             rampant through Hogwarts, presenting a different sort of danger. Love may be in the air, but tragedy looms, and
-            Hogwarts may never be the same again.<br>
-            <br>
+            Hogwarts may never be the same again.
+        </p>
+        <p class="p2">
             Harry Potter and the Half-Blood Prince is a British-American fantasy film based on the sixth novel by J.K Rowling.
             This film was released on 15 July 2009 telling about the adventures during the school year 1996-1997. David Yates
             returned to direct the sequel to Harry Potter and the Order of the Phoenix, as did David Heyman and David Barron to
             produce, and Steve Kloves, though he did not write the fifth film, returned to write. Reprising their roles from from
             earlier films are Daniel Radcliffe, Rupert Grint, Emma Watson, Tom Felton, Helena Bonham Carter, Robbie Coltrane, 
-            Michael Gambon, Alan Rickman, Maggie Smith, David Thewlis, Bonnie Wright, and more.<br>
-            <br>
+            Michael Gambon, Alan Rickman, Maggie Smith, David Thewlis, Bonnie Wright, and more.
+        </p>
+        <p class="p2">
             The film grossed $933 million worldwide, making it the second highest-grossing film of 2009 (behind Avatar) and the
             ninth highest-grossing film of all time at the time.
         </p>
+        <p class="p2">
+            For more information, check out the <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Half-Blood_Prince_(film)" target="_blank">Official Wikipedia</a>
+        </p>
     </section>
+
+    <footer>THE MOVIE CORNER</footer>
 </body>
+</html>
