added script.js for the photos in more.html, changed from 4 pictures only to a slideshow that changes every 5s, did up formatting for mobile device view

--- a/more.html
+++ b/more.html
@@ -21,12 +21,10 @@
     <h4>MORE INFO</h4>
     <section>
         <h3>Photos</h3>
-        <div class="more-container">
-            <img src="Images/Scene1.jpg" alt="Scene One" class="more-image">
-            <img src="Images/Scene2.jpg" alt="Scene Two" class="more-image">
-            <img src="Images/Scene3.jpg" alt="Scene Three" class="more-image">
-            <img src="Images/Scene4.webp" alt="Scene Four" class="more-image">
+        <div class="slideshow-container">
+            <img id="slideshow" src="Images/Scene1.jpg" alt="Slideshow" class="slide">
         </div>
+        <script src="script.js"></script>
     </section>
     
     <section>
