edited README.md and changed image file name

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>The Movie Corner</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&family=PT+Serif+Caption&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Irish+Grover&family=PT+Serif+Caption&display=swap" rel="stylesheet">
 </head>
@@ -16,7 +16,7 @@
             <a href="allcast.html">CAST</a>
             <a href="more.html">MORE</a>
         </nav>
-        <img src="Images/HP photo.webp" alt="Harry Potter and the Half-Blood Prince">
+        <img src="Images/HP-photo.webp" alt="Harry Potter and the Half-Blood Prince">
     </header>
 
     <h2>Harry Potter and the Half-Blood Prince (2009)</h2>
@@ -26,7 +26,7 @@
             Duration: 2h 33m<br>
             Genre(s): Adventure, Fantasy
         </p>
-        <p class="p1">Dark Secrets Revealed</p1>
+        <p class="p1">Dark Secrets Revealed</p>
         <h3>Overview</h3>
         <p class="p2">
             As Lord Voldemort tightens his grip on both the Muggle and wizarding worlds, 
@@ -109,7 +109,7 @@
                     <p class="role">Minerva McGonagall</p>
                 </div>
             </div>
-        </div>        
+                
             <a href="allcast.html">
                 <div class="button-container">
                 <button class="button">Show More</button>
